--- a/web/index.html
+++ b/web/index.html
@@ -143,6 +143,7 @@
           <br>
           <p>
             <i class="far fa-clock"></i></i>&nbsp;更新履歴<br>
+            2020年10月1日　郵便番号・住所データ更新<br>
             2020年9月22日　サイトオープン<br>
           </p>
         </div>
