--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
       <h1 class="site-title mb-3">郵便番号・住所変換くん</h1>
       <p class="site-description mb-4">
         郵便番号や住所を検索・変換するサービスです。<br>
-        日本郵便の提供する2020年10月30日付のデータを使用しています。<br>
+        日本郵便の提供する2020年11月30日付のデータを使用しています。<br>
         詳細な使用方法は画面右上の使い方リンクをご参照下さい。<br>
       </p>
       <div class="search-control mb-4">
@@ -143,6 +143,7 @@
           <br>
           <p>
             <i class="far fa-clock"></i></i>&nbsp;更新履歴<br>
+            2020年11月30日　郵便番号・住所データ更新<br>
             2020年11月3日　郵便番号・住所データ更新<br>
             2020年10月1日　郵便番号・住所データ更新<br>
             2020年9月22日　サイトオープン<br>
